--- a/service-front/public/assets/v2/css/application-ie8.css
+++ b/service-front/public/assets/v2/css/application-ie8.css
@@ -2862,6 +2862,8 @@ input[type=number] {
     font-weight: 700;
     text-align: center;
     text-transform: uppercase; }
+  .accordion-summary.wide-label .label {
+    width: 103px; }
   .accordion-summary .link {
     display: inline-block;
     float: right; }
@@ -2873,6 +2875,8 @@ input[type=number] {
     margin-right: 92px;
     padding-right: 130px;
     border-right: 6px solid #fff; }
+  .accordion-summary.wide-label .title-box {
+    padding-right: 215px; }
   .accordion-summary .label-and-edit-box {
     position: absolute;
     top: 0;
